--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -6,8 +6,8 @@ bind-key C-a send-prefix
 # split panes using - and =. 
 # - splits it horizontally, intuitively
 # = splits it vertically, chosen due to its proximity
-bind = split-window -h
-bind - split-window -v
+bind = split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
@@ -15,10 +15,13 @@ unbind %
 bind r source-file ~/.tmux.conf
 
 # switch panes using Alt-arrow without prefix
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
+bind -n M-h select-pane -L
+bind -n M-l select-pane -R
+bind -n M-k select-pane -U
+bind -n M-j select-pane -D
+
+# Make pressing esc in nvim in tmux faster
+set -sg escape-time 10
 
 # don't rename windows automatically
 set-option -g allow-rename off
