--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -20,6 +20,8 @@ bind -n M-l select-pane -R
 bind -n M-k select-pane -U
 bind -n M-j select-pane -D
 
+bind x confirm-before -p "kill-pane #P? (y/n)" kill-pane
+
 # Make pressing esc in nvim in tmux faster
 set -sg escape-time 10
 
