--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -18,6 +18,10 @@ bind -n M-l select-pane -R
 bind -n M-k select-pane -U
 bind -n M-j select-pane -D
 
+# switch windows using Alt-arrow without prefix
+bind -n M-n select-window -n
+bind -n M-p select-window -p
+
 bind x confirm-before -p "kill-pane #P? (y/n)" kill-pane
 
 # Make pressing esc in nvim in tmux faster
@@ -26,21 +30,6 @@ set -sg escape-time 10
 # don't rename windows automatically
 set-option -g allow-rename off
 
-######################
-### DESIGN CHANGES ###
-######################
-
-# loud or quiet?
-set -g visual-activity off
-set -g visual-bell off
-set -g visual-silence off
-setw -g monitor-activity off
-set -g bell-action none
-
-#  modes
-setw -g clock-mode-colour colour5
-setw -g mode-style 'fg=colour1 bg=colour18 bold'
-
 # panes
 set -g pane-border-style 'fg=colour19'
 set -g pane-active-border-style 'fg=colour9'
@@ -48,21 +37,8 @@ set -g pane-active-border-style 'fg=colour9'
 # statusbar
 set-option -s status-interval 5
 
-set -g status-position bottom
-set -g status-justify left
-set -g status-style 'bg=colour18 fg=colour137 dim'
-set -g status-left ''
 set -g status-right '#[fg=colour233,bg=colour7] %d/%m #[fg=colour233,bg=colour8] %H:%M:%S '
 set -g status-right-length 150
-set -g status-left-length 20
-
-setw -g window-status-current-style 'fg=colour1 bg=colour19 bold'
-setw -g window-status-current-format ' #I#[fg=colour249]:#[fg=colour255]#W#[fg=colour249]#F '
-
-setw -g window-status-style 'fg=colour9 bg=colour18'
-setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
-
-setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
 
 # messages
 set -g message-style 'fg=colour2 bg=colour16 bold'
